--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 	<!-- BEGIN nav -->
 	<div class="nav">
 		<ul>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
+			<li class="is-active"><a href="#">Главная</a></li>
+			<li><a href="#">Каталог продукции</a></li>
+			<li><a href="#">О компании</a></li>
+			<li><a href="#">Оплата и доставка</a></li>
+			<li><a href="#">Новости и скидки</a></li>
+			<li><a href="#">Контакты</a></li>
 		</ul>
 	</div>
 	<!-- END nav -->
