--- a/index.html
+++ b/index.html
@@ -49,9 +49,47 @@
 		<div class="l-layout">
 			<div class="l-sidebar">
 				<!-- BEGIN subnav -->
-				<div class="subnav">
+				<div class="subnav js-subnav">
 					<ul>
-						<li><a href="#"></a></li>
+						<li class="subnav__title"><a href="#">Средства гигены для полости рта</a></li>
+						<li><a href="#">Ирригаторы</a></li>
+						<li><a href="#">Зубные щетки</a></li>
+						<li><a href="#">Сменные насадки (hover)</a></li>
+						<li><a href="#">Зубные пасты, пенки, ополаскиватели</a></li>
+						<li class="has-dropdown"><a href="#">Жидкости для (click)</a>
+							<div class="subnav__dropdown">
+								<ul>
+									<li><a href="#">Наборы</a></li>
+									<li><a href="#">Ершики Curaprox Prime</a></li>
+									<li><a href="#">Ершики Curaprox Regular<br> (для брекетов)</a></li>
+									<li><a href="#">Ершики Curaprox Implant<br> (для имплантов)</a></li>
+									<li><a href="#">Держатели для ершиков Curaprox</a></li>
+								</ul>
+							</div>
+						</li>
+						<li><a href="#">Межзубные ершики</a></li>
+						<li><a href="#">Межзубные нити и флоссы</a></li>
+						<li><a href="#">Отбеливание зубов</a></li>
+						<li><a href="#">Зубная косметика</a></li>
+						<li><a href="#">Для детей</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Для имплантов и протезов</a></li>
+						<li><a href="#">Стерилизаторы и дезинфекторы</a></li>
+						<li><a href="#">Полезная жевательная резинка</a></li>
+					</ul>
+				</div>
+				<!-- END subnav -->
+				<!-- BEGIN subnav -->
+				<div class="subnav subnav_mod">
+					<ul>
+						<li class="subnav__title"><a href="#">Материалы и оборудование для стоматологии</a></li>
+						<li><a href="#">Апекслокаторы</a></li>
+						<li><a href="#">Запечатывающие устройства</a></li>
+						<li><a href="#">Наконечники стоматологические, мазки</a></li>
+						<li><a href="#">Пескоструйные аппараты</a></li>
+						<li><a href="#">Лампы полимеризационные</a></li>
+						<li><a href="#">Скалеры и насадки</a></li>
+						<li><a href="#">Прочее оборудование</a></li>
 					</ul>
 				</div>
 				<!-- END subnav -->
@@ -59,7 +97,7 @@
 			<div class="l-main">
 				<!-- BEGIN search -->
 				<div class="search">
-					
+					das
 				</div>
 				<!-- END search -->
 			</div>
