--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
 			<div class="l-main">
 				<!-- BEGIN search -->
 				<div class="search">
-					das
+					<div class="search__row">
+						<input type="text" class="search__q" placeholder="Поиск по 3000 наименований"><button type="submit" class="search__btn btn">Найти</button>
+					</div>
+					<div class="search__order">
+						<a href="#" class="search__ordertrigger">Не нашлось? Закажите!</a>
+					</div>
 				</div>
 				<!-- END search -->
 			</div>
