--- a/index.html
+++ b/index.html
@@ -105,6 +105,81 @@
 					</div>
 				</div>
 				<!-- END search -->
+				<!-- BEGIN catalog -->
+				<div class="catalog">
+					<div class="catalog__list">
+						<div class="catalog__item is-new">
+							<div class="catalog__badge"></div>
+							<div class="catalog__info">
+								<a href="#" class="catalog__hotzone"></a>
+								<div class="catalog__pic">
+									<div class="catalog__picoverlay">Подробнее</div>
+									<img src="img/item1.jpg" alt="img">
+								</div>
+								<div class="catalog__descr">Dentinox Зубная паста детская с зуб. щеткой&#8209;наперстком Nenedent baby 20мл щеткой&#8209;наперстком Nenedent baby 20мл</div>
+							</div>
+							<div class="catalog__price">
+								<div class="catalog__pricevalue">300 Р</div>
+							</div>
+							<div class="catalog__btn">
+								<a href="#" class="btn btn-primary">В корзину</a>
+							</div>
+						</div>
+						<div class="catalog__item is-sale">
+							<div class="catalog__badge"></div>
+							<div class="catalog__info">
+								<a href="#" class="catalog__hotzone"></a>
+								<div class="catalog__pic">
+									<div class="catalog__picoverlay">Подробнее</div>
+									<img src="img/item2.jpg" alt="img">
+								</div>
+								<div class="catalog__descr">Ротокан — экстракт для приема внутрь и местного применения 50 мл</div>
+							</div>
+							<div class="catalog__price">
+								<span class="catalog__priceold">400 Р</span>
+								<div class="catalog__pricevalue">300 Р</div>
+							</div>
+							<div class="catalog__btn">
+								<a href="#" class="btn btn-primary">В корзину</a>
+							</div>
+						</div>
+						<div class="catalog__item">
+							<div class="catalog__badge"></div>
+							<div class="catalog__info">
+								<a href="#" class="catalog__hotzone"></a>
+								<div class="catalog__pic">
+									<div class="catalog__picoverlay">Подробнее</div>
+									<img src="img/item3.jpg" alt="img">
+								</div>
+								<div class="catalog__descr">Oral-B насадка для элек. зубных щеток Sensitive бережное очищение зубов EBS17 2 шт.</div>
+							</div>
+							<div class="catalog__price">
+								<div class="catalog__pricevalue">300 Р</div>
+							</div>
+							<div class="catalog__btn">
+								<a href="#" class="btn btn-primary">В корзину</a>
+							</div>
+						</div>
+						<div class="catalog__item is-best">
+							<div class="catalog__badge"></div>
+							<div class="catalog__info">
+								<a href="#" class="catalog__hotzone"></a>
+								<div class="catalog__pic">
+									<div class="catalog__picoverlay">Подробнее</div>
+									<img src="img/item1.jpg" alt="img">
+								</div>
+								<div class="catalog__descr">Dentinox Зубная паста детская с зуб. щеткой-наперстком Nenedent baby 20мл</div>
+							</div>
+							<div class="catalog__price">
+								<div class="catalog__pricevalue">35 000 Р</div>
+							</div>
+							<div class="catalog__btn">
+								<a href="#" class="btn btn-primary">В корзину</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- END catalog -->
 			</div>
 		</div>
 	</div>
