--- a/index.html
+++ b/index.html
@@ -180,6 +180,28 @@
 					</div>
 				</div>
 				<!-- END catalog -->
+				<!-- BEGIN proposal -->
+				<div class="proposals">
+					<div class="proposals__list">
+						<div class="proposal">
+							<div class="proposal__content">
+								<a href="#">
+									<img src="img/prop1.jpg" alt="img">
+								</a>
+							</div>
+							<div class="proposal__more"><a href="#">Все акции</a></div>
+						</div>
+						<div class="proposal">
+							<div class="proposal__content">
+								<a href="#">
+									<img src="img/prop2.jpg" alt="img">
+								</a>
+							</div>
+							<div class="proposal__more"><a href="#">Все скидки</a></div>
+						</div>
+					</div>
+				</div>
+				<!-- END proposal -->
 			</div>
 		</div>
 	</div>
