--- a/index.html
+++ b/index.html
@@ -202,6 +202,124 @@
 					</div>
 				</div>
 				<!-- END proposal -->
+				<!-- BEGIN brands -->
+				<div class="brands">
+					<div class="brands__row">
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand1.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand2.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand3.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand2.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand1.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand4.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand5.png" alt="brand">
+							</a>
+						</div>
+					</div>
+					<div class="brands__row">
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand1.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand2.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand3.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand2.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand1.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand6.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand7.png" alt="brand">
+							</a>
+						</div>
+					</div>
+					<div class="brands__row">
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand1.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand2.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand3.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand2.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand1.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand8.png" alt="brand">
+							</a>
+						</div>
+						<div class="brands__item">
+							<a href="#">
+								<img src="img/brand9.png" alt="brand">
+							</a>
+						</div>
+					</div>
+					<div class="brands__more">
+						<a href="#">И ещё 73 бренда</a>
+					</div>
+				</div>
+				<!-- END brands -->
 			</div>
 		</div>
 	</div>
