--- a/index.html
+++ b/index.html
@@ -320,6 +320,23 @@
 					</div>
 				</div>
 				<!-- END brands -->
+				<!-- BEGIN entries -->
+				<div class="entries">
+					<div class="entries__list">
+						<div class="entries__item">
+							<div class="entries__title"><a href="#">Предотвратите кариес</a></div>
+							<p>Не многие знают, что самое распрастраненное заболевание зубов — кариес, можно предотвратить нанесением на зубную эмаль специального состава. Без утомительного, болезненного и дорогоро пломбирования.</p>
+						</div>
+						<div class="entries__item">
+							<div class="entries__title"><a href="#">Исправляйте прикус без брекетов</a></div>
+							<p>Проблемы с прикусом видны ещё на стадии формирования молочных зубов. Не обязательно дожидаться окончания роста костной ткани и ставить беркеты на несколько лет.</p>
+						</div>
+					</div>
+					<div class="entries__more">
+						<a href="#">Все статьи «Энциклопеции здоровых зубов»</a>
+					</div>
+				</div>
+				<!-- END entries -->
 			</div>
 		</div>
 	</div>
