--- a/index.html
+++ b/index.html
@@ -320,6 +320,23 @@
 					</div>
 				</div>
 				<!-- END brands -->
+				<!-- BEGIN partneradv -->
+				<div class="partneradv">
+					<div class="partneradv__pic">
+						<img src="img/cps.jpg" alt="cps">
+					</div>
+					<div class="partneradv__info">
+						<div class="partneradv__text">
+							<div class="partneradv__subtitle">Наш партнёр</div>
+							<div class="partneradv__title">Центр профилактической стоматологии</div>
+							<div class="partneradv__descr">Профилактическая практика по предотвращению кариеса и заболеваний парадонта</div>
+						</div>
+						<div class="partneradv__action">
+							<a href="#" class="btn btn-action">Бесплатная консультация</a><a href="#" class="btn btn-action">Записаться на приём</a>
+						</div>
+					</div>
+				</div>
+				<!-- END partneradv -->
 				<!-- BEGIN entries -->
 				<div class="entries">
 					<div class="entries__list">
