--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<ul>
 					<li><a href="#"><i class="icon icon_phone"></i>8 (495) 452–08–04</a></li>
 					<li><a href="#" class="contacts__callback">Обратный звонок!</a></li>
-					<li><a href="#"><i class="icon icon_mail"></i>denteka@yandex.ru</a></li>
+					<li><a href="#" class="contacts__mail"><i class="icon icon_mail"></i>denteka@yandex.ru</a></li>
 				</ul>
 				<ul>
 					<li><a href="#"><i class="icon icon_mts"></i>8 (916) 836–48–98</a></li>
@@ -51,7 +51,7 @@
 				<!-- BEGIN subnav -->
 				<div class="subnav js-subnav">
 					<ul>
-						<li class="subnav__title"><a href="#">Средства гигены для полости рта</a></li>
+						<li class="subnav__title"><a href="#">Средства гигены<br> для полости рта</a></li>
 						<li><a href="#">Ирригаторы</a></li>
 						<li><a href="#">Зубные щетки</a></li>
 						<li><a href="#">Сменные насадки (hover)</a></li>
@@ -65,6 +65,12 @@
 									<li><a href="#">Ершики Curaprox Implant<br> (для имплантов)</a></li>
 									<li><a href="#">Держатели для ершиков Curaprox</a></li>
 								</ul>
+								<div class="subnav__sale">
+									<a href="#">
+										<span>Акция на эту<br>
+										категорию</span>
+									</a>
+								</div>
 							</div>
 						</li>
 						<li><a href="#">Межзубные ершики</a></li>
@@ -98,9 +104,24 @@
 				<!-- BEGIN search -->
 				<div class="search">
 					<div class="search__row">
-						<input type="text" class="search__q" placeholder="Поиск по 3000 наименований"><button type="submit" class="search__btn btn">Найти</button>
+						<input type="text" class="search__q input" placeholder="Поиск по 3000 наименований"><button type="submit" class="search__btn btn">Найти</button>
 					</div>
 					<div class="search__order">
+						<div class="search__form" style="display: none;">
+							<div class="search__formrow">
+								<input type="text" class="input" placeholder="Фамилия Имя">
+							</div>
+							<div class="search__formrow search__formrow_mod">
+								<input type="text" class="input" placeholder="Телефон">
+								<input type="text" class="input" placeholder="E-mail">
+							</div>
+							<div class="search__formrow">
+								<input type="text" class="input" placeholder="Название нужного товара">
+							</div>
+							<div class="search__formrow">
+								<button type="submit" class="btn">Заказать</button>
+							</div>
+						</div>
 						<a href="#" class="search__ordertrigger">Не нашлось? Закажите!</a>
 					</div>
 				</div>
@@ -370,7 +391,7 @@
 			<ul>
 				<li><a href="#"><i class="icon icon_phone"></i>8 (495) 452–08–04</a></li>
 				<li>&nbsp;</li>
-				<li><a href="#"><i class="icon icon_mail"></i>denteka@yandex.ru</a></li>
+				<li><a href="#" class="contacts__mail"><i class="icon icon_mail"></i>denteka@yandex.ru</a></li>
 			</ul>
 			<ul>
 				<li><a href="#"><i class="icon icon_mts"></i>8 (916) 836–48–98</a></li>
