--- a/katalog.html
+++ b/katalog.html
@@ -105,7 +105,7 @@
 				<ul class="breadcrumbs">
 					<li><a href="#">Главная</a></li>
 					<li><a href="#">Средства гигиены для полости рта</a></li>
-					<li>Ирригаторы</li>
+					<li><span>Ирригаторы</span></li>
 				</ul>
 				<!-- END breadcrumbs -->
 				<h1 class="h1">Ирригаторы</h1>
