--- a/tipovaya.html
+++ b/tipovaya.html
@@ -104,7 +104,7 @@
 				<!-- BEGIN breadcrumbs -->
 				<ul class="breadcrumbs">
 					<li><a href="#">Главная</a></li>
-					<li>О компании</li>
+					<li><span>О компании</span></li>
 				</ul>
 				<!-- END breadcrumbs -->
 				<!-- BEGIN topic -->
