--- a/product.html
+++ b/product.html
@@ -116,7 +116,32 @@
 					<h1 class="h1">ORAL-B Ополаскиватель полости рта 300&nbsp;мл без алкогольный</h1>
 					<div class="product__info">
 						<div class="product__meta">
-							<div class="product__gal"></div>
+							<div class="product__gal">
+								<div class="flexslider">
+									<ul class="flexslider__slides">
+										<li data-thumb="img/slide1-thumb.jpg">
+											<a class="fancybox" href="img/slide1.jpg" data-fancybox-group="gallery" title="ORAL-B Ополаскиватель полости рта 300 мл без алкогольный">
+												<img src="img/slide1.jpg">
+											</a>
+										</li>
+										<li data-thumb="img/slide1-thumb.jpg">
+											<a class="fancybox" href="img/slide1.jpg" data-fancybox-group="gallery" title="ORAL-B полости рта 300 мл без алкогольный">
+												<img src="img/slide1.jpg">
+											</a>
+										</li>
+										<li data-thumb="img/slide1-thumb.jpg">
+											<a class="fancybox" href="img/slide1.jpg" data-fancybox-group="gallery" title="ORAL-B рта 300 мл без алкогольный">
+												<img src="img/slide1.jpg">
+											</a>
+										</li>
+										<li data-thumb="img/slide1-thumb.jpg">
+											<a class="fancybox" href="img/slide1.jpg" data-fancybox-group="gallery" title="ORAL-B Ополаскиватель полости рта 300 мл без алкогольный">
+												<img src="img/slide1.jpg">
+											</a>
+										</li>
+									</ul>
+								</div>
+							</div>
 							<div class="product__price">
 								<div class="product__price-old">6 000 Р</div>
 								<div class="product__price-current">5 400 Р</div>
