--- a/product.html
+++ b/product.html
@@ -52,7 +52,23 @@
 				<div class="subnav js-subnav">
 					<ul>
 						<li class="subnav__title"><a href="#">Средства гигены<br> для полости рта</a></li>
-						<li><a href="#">Ирригаторы</a></li>
+						<li class="has-dropdown"><a href="#">Ирригаторы</a>
+							<div class="subnav__dropdown">
+								<ul>
+									<li><a href="#">Наборы</a></li>
+									<li><a href="#">Ершики Curaprox Prime</a></li>
+									<li><a href="#">Ершики Curaprox Regular<br> (для брекетов)</a></li>
+									<li><a href="#">Ершики Curaprox Implant<br> (для имплантов)</a></li>
+									<li><a href="#">Держатели для ершиков Curaprox</a></li>
+								</ul>
+								<div class="subnav__sale">
+									<a href="#">
+										<span>Акция на эту<br>
+										категорию</span>
+									</a>
+								</div>
+							</div>
+						</li>
 						<li><a href="#">Зубные щетки</a></li>
 						<li><a href="#">Сменные насадки (hover)</a></li>
 						<li><a href="#">Зубные пасты, пенки, ополаскиватели</a></li>
