--- a/index.html
+++ b/index.html
@@ -58,18 +58,20 @@
 						<li><a href="#">Зубные пасты, пенки, ополаскиватели</a></li>
 						<li class="has-dropdown"><a href="#">Жидкости для (click)</a>
 							<div class="subnav__dropdown">
-								<ul>
-									<li><a href="#">Наборы</a></li>
-									<li><a href="#">Ершики Curaprox Prime</a></li>
-									<li><a href="#">Ершики Curaprox Regular<br> (для брекетов)</a></li>
-									<li><a href="#">Ершики Curaprox Implant<br> (для имплантов)</a></li>
-									<li><a href="#">Держатели для ершиков Curaprox</a></li>
-								</ul>
-								<div class="subnav__sale">
-									<a href="#">
-										<span>Акция на эту<br>
-										категорию</span>
-									</a>
+								<div class="subnav__dropdown-wrap js-sidenav">
+									<ul>
+										<li><a href="#">Наборы</a></li>
+										<li><a href="#">Ершики Curaprox Prime</a></li>
+										<li><a href="#">Ершики Curaprox Regular<br> (для брекетов)</a></li>
+										<li><a href="#">Ершики Curaprox Implant<br> (для имплантов)</a></li>
+										<li><a href="#">Держатели для ершиков Curaprox</a></li>
+									</ul>
+									<div class="subnav__sale">
+										<a href="#">
+											<span>Акция на эту<br>
+											категорию</span>
+										</a>
+									</div>
 								</div>
 							</div>
 						</li>
@@ -79,10 +81,48 @@
 						<li><a href="#">Зубная косметика</a></li>
 						<li><a href="#">Для детей</a></li>
 						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li><a href="#">Все для брекетов</a></li>
+						<li class="has-dropdown"><a href="#">Все для брекетов</a>
+							<div class="subnav__dropdown">
+								<div class="subnav__dropdown-wrap js-sidenav">
+									<ul>
+										<li><a href="#">Наборы</a></li>
+										<li><a href="#">Ершики Curaprox Prime</a></li>
+										<li><a href="#">Ершики Curaprox Regular<br> (для брекетов)</a></li>
+										<li><a href="#">Ершики Curaprox Implant<br> (для имплантов)</a></li>
+										<li><a href="#">Держатели для ершиков Curaprox</a></li>
+									</ul>
+								</div>
+							</div>
+						</li>
 						<li><a href="#">Для имплантов и протезов</a></li>
 						<li><a href="#">Стерилизаторы и дезинфекторы</a></li>
 						<li><a href="#">Полезная жевательная резинка</a></li>
 					</ul>
+					<div class="subnav__border"></div>
 				</div>
 				<!-- END subnav -->
 				<!-- BEGIN subnav -->
